@@ -79,6 +79,20 @@ sub item_matches
 	return( 1 );
 }
 
+sub get_query_tree
+{
+	my( $self, $session, $qdata ) = @_;
+
+	my @list = ( "AND" );
+	foreach my $sub_op ( $self->ordered_ops )
+	{
+		push @list, $sub_op->get_query_tree( $session, $qdata );
+	}
+
+	return \@list;
+}
+
+
 sub process
 {
 	my( $self, $session, $i, $filter ) = @_;
