@@ -60,11 +60,10 @@ sub item_matches
 
 sub process
 {
-	my( $self, $session, $i, $filter ) = @_;
+	my( $self, $session ) = @_;
 
-	$i = 0 unless( defined $i );
 	my $database = $session->get_database;
-	my $tables = $self->get_tables( $session );
+	my $tables = $self->SUPER::get_tables( $session );
 	my $sql_col = $self->{field}->get_sql_name;
 
 	my $where;
@@ -86,7 +85,7 @@ sub process
 			: $self->{field}->get_dataset->get_sql_table_name() 
 	};
 
-	return $self->run_tables( $session, $tables );
+	return $tables;
 }
 
 sub get_op_val
